--- a/sdk/src/main/res/drawable-night/jivo_sdk_bg_banner.xml
+++ b/sdk/src/main/res/drawable-night/jivo_sdk_bg_banner.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E6191919" />
+    <gradient
+        android:angle="90"
+        android:endColor="#CC121212"
+        android:startColor="#9E121212"
+        android:type="linear" />
 </shape>
