--- a/sdk/src/main/res/drawable/jivo_sdk_bg_appbar.xml
+++ b/sdk/src/main/res/drawable/jivo_sdk_bg_appbar.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <shape>
-            <gradient
-                android:angle="180"
-                android:endColor="#2F3347"
-                android:startColor="#414663"
-                android:type="linear" />
-        </shape>
-    </item>
-
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:angle="180"
+        android:endColor="#2F3347"
+        android:startColor="#414663"
+        android:type="linear" />
+</shape>
