--- a/sdk/src/main/res/drawable/jivo_sdk_bg_banner.xml
+++ b/sdk/src/main/res/drawable/jivo_sdk_bg_banner.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#DDFFFFFF" />
+    <gradient
+        android:angle="90"
+        android:endColor="#9EFFFFFF"
+        android:startColor="#CCFFFFFF"
+        android:type="linear" />
 </shape>
