--- a/sdk/src/main/res/values-v23/themes.xml
+++ b/sdk/src/main/res/values-v23/themes.xml
@@ -5,6 +5,6 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="Base.Theme.Jivo" parent="Base.V23.Theme.JivoSDK" />
+    <style name="Main.Theme.JivoSDK" parent="Base.V23.Theme.JivoSDK" />
 
 </resources>
