--- a/sdk/src/main/res/values-v28/styles.xml
+++ b/sdk/src/main/res/values-v28/styles.xml
@@ -5,58 +5,58 @@
         <item name="android:lineHeight">36sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Headline1" parent="Base.V28.TextAppearance.JivoSDK.Headline1" />
+    <style name="Base.TextAppearance.JivoSDK.Headline1" parent="Base.V28.TextAppearance.JivoSDK.Headline1" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Headline2" parent="Base.V21.TextAppearance.JivoSDK.Headline2" />
+    <style name="Base.V28.TextAppearance.JivoSDK.Headline2" parent="Base.V21.TextAppearance.JivoSDK.Headline2" />
 
-    <style name="Base.TextAppearance.Headline2" parent="Base.V28.TextAppearance.Jivo.Headline2" />
+    <style name="Base.TextAppearance.JivoSDK.Headline2" parent="Base.V28.TextAppearance.JivoSDK.Headline2" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Headline3" parent="Base.V21.TextAppearance.JivoSDK.Headline3">
+    <style name="Base.V28.TextAppearance.JivoSDK.Headline3" parent="Base.V21.TextAppearance.JivoSDK.Headline3">
         <item name="android:lineHeight">24sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Headline3" parent="Base.V28.TextAppearance.Jivo.Headline3" />
+    <style name="Base.TextAppearance.JivoSDK.Headline3" parent="Base.V28.TextAppearance.JivoSDK.Headline3" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Subtitle1" parent="Base.V21.TextAppearance.JivoSDK.Subtitle1">
+    <style name="Base.V28.TextAppearance.JivoSDK.Subtitle1" parent="Base.V21.TextAppearance.JivoSDK.Subtitle1">
         <item name="android:lineHeight">24sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Subtitle1" parent="Base.V28.TextAppearance.Jivo.Subtitle1" />
+    <style name="Base.TextAppearance.JivoSDK.Subtitle1" parent="Base.V28.TextAppearance.JivoSDK.Subtitle1" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Subtitle2" parent="Base.V21.TextAppearance.JivoSDK.Subtitle2">
+    <style name="Base.V28.TextAppearance.JivoSDK.Subtitle2" parent="Base.V21.TextAppearance.JivoSDK.Subtitle2">
         <item name="android:lineHeight">24sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Subtitle2" parent="Base.V28.TextAppearance.Jivo.Subtitle2" />
+    <style name="Base.TextAppearance.JivoSDK.Subtitle2" parent="Base.V28.TextAppearance.JivoSDK.Subtitle2" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Body1" parent="Base.V21.TextAppearance.JivoSDK.Body1">
+    <style name="Base.V28.TextAppearance.JivoSDK.Body1" parent="Base.V21.TextAppearance.JivoSDK.Body1">
         <item name="android:lineHeight">24sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Body1" parent="Base.V28.TextAppearance.Jivo.Body1" />
+    <style name="Base.TextAppearance.JivoSDK.Body1" parent="Base.V28.TextAppearance.JivoSDK.Body1" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Body2" parent="Base.V21.TextAppearance.JivoSDK.Body2">
+    <style name="Base.V28.TextAppearance.JivoSDK.Body2" parent="Base.V21.TextAppearance.JivoSDK.Body2">
         <item name="android:lineHeight">20sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Body2" parent="Base.V28.TextAppearance.Jivo.Body2" />
+    <style name="Base.TextAppearance.JivoSDK.Body2" parent="Base.V28.TextAppearance.JivoSDK.Body2" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Button" parent="Base.V21.TextAppearance.JivoSDK.Button">
+    <style name="Base.V28.TextAppearance.JivoSDK.Button" parent="Base.V21.TextAppearance.JivoSDK.Button">
         <item name="android:lineHeight">16sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Button" parent="Base.V28.TextAppearance.Jivo.Button" />
+    <style name="Base.TextAppearance.JivoSDK.Button" parent="Base.V28.TextAppearance.JivoSDK.Button" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Caption" parent="Base.V21.TextAppearance.JivoSDK.Caption">
+    <style name="Base.V28.TextAppearance.JivoSDK.Caption" parent="Base.V21.TextAppearance.JivoSDK.Caption">
         <item name="android:lineHeight">16sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Caption" parent="Base.V28.TextAppearance.Jivo.Caption" />
+    <style name="Base.TextAppearance.JivoSDK.Caption" parent="Base.V28.TextAppearance.JivoSDK.Caption" />
 
-    <style name="Base.V28.TextAppearance.Jivo.Overline" parent="Base.V21.TextAppearance.JivoSDK.Overline">
+    <style name="Base.V28.TextAppearance.JivoSDK.Overline" parent="Base.V21.TextAppearance.JivoSDK.Overline">
         <item name="android:lineHeight">16sp</item>
     </style>
 
-    <style name="Base.TextAppearance.Overline" parent="Base.V28.TextAppearance.Jivo.Overline" />
+    <style name="Base.TextAppearance.JivoSDK.Overline" parent="Base.V28.TextAppearance.JivoSDK.Overline" />
 
 </resources>
