--- a/sdk/src/main/res/values/themes.xml
+++ b/sdk/src/main/res/values/themes.xml
@@ -28,7 +28,7 @@
         <item name="colorAccent">@color/jivo_sdk_primary_graphite_500</item>
     </style>
 
-    <style name="ImageViewerTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="JivoSDK.ImageViewerTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="android:textColorPrimary">@color/white</item>
