--- a/sdk/src/main/res/layout/fragment_jivo_chat.xml
+++ b/sdk/src/main/res/layout/fragment_jivo_chat.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
-            android:visibility="@{viewModel.isBlacklisted ? View.VISIBLE:View.INVISIBLE}">
+            android:visibility="@{viewModel.isUnavailable ? View.VISIBLE:View.INVISIBLE}">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
@@ -88,7 +88,7 @@
             android:overScrollMode="never"
             android:paddingTop="32dp"
             android:paddingBottom="16dp"
-            android:visibility="@{viewModel.isBlacklisted ? View.INVISIBLE:View.VISIBLE}"
+            android:visibility="@{viewModel.isUnavailable ? View.INVISIBLE:View.VISIBLE}"
             app:layout_constraintBottom_toTopOf="@id/controls"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -196,7 +196,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:visibility="@{viewModel.isBlacklisted ? View.INVISIBLE:View.VISIBLE}"
+            android:visibility="@{viewModel.isUnavailable ? View.INVISIBLE:View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
