--- a/sdk/src/main/res/layout/dg_item_contact_form.xml
+++ b/sdk/src/main/res/layout/dg_item_contact_form.xml
@@ -117,7 +117,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="12dp"
                     android:enabled="@{viewModel.canSend}"
-                    android:onClick="@{() -> viewModel.sendUserInfo()}"
+                    android:onClick="@{() -> viewModel.sendContactForm()}"
                     android:textAllCaps="false"
                     tools:ignore="HardcodedText"
                     tools:text="Send" />
